# infra-sentinel

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
config/: providers.yaml  sentinel.yaml
demo/: events.jsonl  k8s_mock_state.json
docker/: Dockerfile
docs/: ARCHITECTURE.md  OPERATIONS.md  SCENARIOS.md
rules/: 10_high_cpu.yaml  20_pod_crashloop.yaml  30_error_rate_spike.yaml
src/infra_sentinel/: approvals.py  audit.py  cli.py  engine.py  models.py  utils.py
src/infra_sentinel/providers/: __init__.py  base.py  http.py  k8s.py  slack.py
tests/: test_engine.py  test_rules.py
